# geometry-aware-transformer

./: .gitignore  README.md  pyproject.toml  train_seml.py
config/: config_H.yaml
models/: __init__.py  fit_moleculenet_task.py  label_inference.py
models/modules/: atomic.py  attention.py  bessel.py
training/: data_container.py  data_provider.py  trainer.py
